// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    error={false}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(InputLabel))
      id="undefined"
    />
    <WithStyles(ForwardRef(Select))
      autoWidth={true}
      floatingLabelText="This is a test selectfield component"
      fullWidth={true}
      inputProps={
        Object {
          "aria-labelledby": "undefined",
          "data-testid": undefined,
          "id": undefined,
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<Fragment>
  <WithStyles(ForwardRef(FormControl))
    error={true}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ForwardRef(InputLabel))
      id="undefined"
    />
    <WithStyles(ForwardRef(Select))
      autoWidth={true}
      error={true}
      floatingLabelText="test selectfield component"
      fullWidth={true}
      inputProps={
        Object {
          "aria-labelledby": "undefined",
          "data-testid": undefined,
          "id": undefined,
        }
      }
      name="selectfield"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
    />
    <WithStyles(ForwardRef(FormHelperText))>
      Something bad happened
    </WithStyles(ForwardRef(FormHelperText))>
  </WithStyles(ForwardRef(FormControl))>
</Fragment>
`;
